Nettoyage de la branche MAIN

--- a/wiki_scrap/fonction_scrapping.ipynb
+++ b/wiki_scrap/fonction_scrapping.ipynb
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "a64479dc-c4a0-4bc7-9272-739ad5feaf18",
    "metadata": {
     "scrolled": true
@@ -114,7 +114,7 @@
       "Table 10 successfully scraped.\n",
       "Table 11 successfully scraped.\n",
       "Table 12 successfully scraped.\n",
-      "Merged tables saved to work/movies/wiki_scrap/academy_bf.csv\n",
+      "Merged tables saved to wiki_scrap/academy_bf.csv\n",
       "Processing academy_bd...\n",
       "Table 1 successfully scraped.\n",
       "Table 2 successfully scraped.\n",
@@ -131,7 +131,7 @@
       "Table 13 successfully scraped.\n",
       "Table 14 successfully scraped.\n",
       "Table 15 successfully scraped.\n",
-      "Merged tables saved to work/movies/wiki_scrap/academy_bd.csv\n",
+      "Merged tables saved to wiki_scrap/academy_bd.csv\n",
       "Processing academy_bc...\n",
       "Table 1 successfully scraped.\n",
       "Table 2 successfully scraped.\n",
@@ -148,7 +148,7 @@
       "Table 13 successfully scraped.\n",
       "Table 14 successfully scraped.\n",
       "Table 15 successfully scraped.\n",
-      "Merged tables saved to work/movies/wiki_scrap/academy_bc.csv\n",
+      "Merged tables saved to wiki_scrap/academy_bc.csv\n",
       "Processing cesar_bf...\n",
       "Table 1 successfully scraped.\n",
       "Table 2 successfully scraped.\n",
@@ -156,7 +156,7 @@
       "Table 4 successfully scraped.\n",
       "Table 5 successfully scraped.\n",
       "Table 6 successfully scraped.\n",
-      "Merged tables saved to work/movies/wiki_scrap/cesar_bf.csv\n",
+      "Merged tables saved to wiki_scrap/cesar_bf.csv\n",
       "Processing cesar_bd...\n",
       "Table 1 successfully scraped.\n",
       "Table 2 successfully scraped.\n",
@@ -167,25 +167,25 @@
       "Table 7 successfully scraped.\n",
       "Table 8 successfully scraped.\n",
       "Table 9 successfully scraped.\n",
-      "Merged tables saved to work/movies/wiki_scrap/cesar_bd.csv\n",
+      "Merged tables saved to wiki_scrap/cesar_bd.csv\n",
       "Processing palme_or...\n",
       "Table 1 successfully scraped.\n",
       "Table 2 successfully scraped.\n",
       "Table 3 successfully scraped.\n",
       "Table 4 successfully scraped.\n",
-      "Merged tables saved to work/movies/wiki_scrap/palme_or.csv\n",
+      "Merged tables saved to wiki_scrap/palme_or.csv\n",
       "Processing cannes_jury...\n",
       "Table 1 successfully scraped.\n",
       "Table 2 successfully scraped.\n",
-      "Merged tables saved to work/movies/wiki_scrap/cannes_jury.csv\n",
+      "Merged tables saved to wiki_scrap/cannes_jury.csv\n",
       "Processing cannes_gp...\n",
       "Table 1 successfully scraped.\n",
       "Table 2 successfully scraped.\n",
-      "Merged tables saved to work/movies/wiki_scrap/cannes_gp.csv\n",
+      "Merged tables saved to wiki_scrap/cannes_gp.csv\n",
       "Processing lion_or...\n",
       "Table 1 successfully scraped.\n",
       "Table 2 successfully scraped.\n",
-      "Merged tables saved to work/movies/wiki_scrap/lion_or.csv\n",
+      "Merged tables saved to wiki_scrap/lion_or.csv\n",
       "Processing lion_argent...\n",
       "Table 1 successfully scraped.\n",
       "Table 2 successfully scraped.\n",
@@ -195,11 +195,11 @@
       "Table 6 successfully scraped.\n",
       "Table 7 successfully scraped.\n",
       "Table 8 successfully scraped.\n",
-      "Merged tables saved to work/movies/wiki_scrap/lion_argent.csv\n",
+      "Merged tables saved to wiki_scrap/lion_argent.csv\n",
       "Processing venice_gj...\n",
       "Table 1 successfully scraped.\n",
       "Table 2 successfully scraped.\n",
-      "Merged tables saved to work/movies/wiki_scrap/venice_gj.csv\n",
+      "Merged tables saved to wiki_scrap/venice_gj.csv\n",
       "Toutes les tables ont été extraites et sauvegardées en fichiers CSV.\n"
      ]
     }
@@ -218,7 +218,7 @@
     "\n",
     "    # Sauvegardez les tables dans un fichier CSV portant le nom du prix\n",
     "    awd_n = f\"{award_name}.csv\"\n",
-    "    save_tables_to_csv(tables, awd_n, folder_path='work/movies/wiki_scrap')\n",
+    "    save_tables_to_csv(tables, awd_n, folder_path='wiki_scrap')\n",
     "\n",
     "print(\"Toutes les tables ont été extraites et sauvegardées en fichiers CSV.\")\n",
     "\n",
