cleaned ac_bd and ac_bc

--- a/cleaning_data/cleaning_awards.ipynb
+++ b/cleaning_data/cleaning_awards.ipynb
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 20,
    "id": "12753b21-bf0c-419f-b9b0-068f6c49d015",
    "metadata": {},
    "outputs": [
@@ -185,33 +185,33 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>13</th>\n",
-       "      <td>1927/28 (1st)</td>\n",
+       "      <td>1927-01-01</td>\n",
        "      <td>Sunrise: A Song of Two Humans</td>\n",
        "      <td>Charles Rosher Karl Struss</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>14</th>\n",
-       "      <td>1927/28 (1st)</td>\n",
+       "      <td>1927-01-01</td>\n",
        "      <td>The Devil Dancer</td>\n",
        "      <td>George Barnes</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>15</th>\n",
-       "      <td>1927/28 (1st)</td>\n",
+       "      <td>1927-01-01</td>\n",
        "      <td>The Magic Flame</td>\n",
        "      <td>George Barnes</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>16</th>\n",
-       "      <td>1927/28 (1st)</td>\n",
+       "      <td>1927-01-01</td>\n",
        "      <td>Sadie Thompson</td>\n",
        "      <td>George Barnes</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>17</th>\n",
-       "      <td>1928/29 (2nd) [note 1]</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <th>18</th>\n",
+       "      <td>1928-01-01</td>\n",
+       "      <td>White Shadows in the South Seas</td>\n",
+       "      <td>Clyde De Vinna</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -221,59 +221,59 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>782</th>\n",
-       "      <td>2022 (95th)</td>\n",
+       "      <td>2022-01-01</td>\n",
        "      <td>All Quiet on the Western Front</td>\n",
        "      <td>James Friend</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>783</th>\n",
-       "      <td>2022 (95th)</td>\n",
+       "      <td>2022-01-01</td>\n",
        "      <td>Bardo, False Chronicle of a Handful of Truths</td>\n",
        "      <td>Darius Khondji</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>784</th>\n",
-       "      <td>2022 (95th)</td>\n",
+       "      <td>2022-01-01</td>\n",
        "      <td>Elvis</td>\n",
        "      <td>Mandy Walker</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>785</th>\n",
-       "      <td>2022 (95th)</td>\n",
+       "      <td>2022-01-01</td>\n",
        "      <td>Empire of Light</td>\n",
        "      <td>Roger Deakins</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>786</th>\n",
-       "      <td>2022 (95th)</td>\n",
+       "      <td>2022-01-01</td>\n",
        "      <td>Tár</td>\n",
        "      <td>Florian Hoffmeister</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>774 rows × 3 columns</p>\n",
+       "<p>681 rows × 3 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "                       Year                                           Film  \\\n",
-       "13            1927/28 (1st)                  Sunrise: A Song of Two Humans   \n",
-       "14            1927/28 (1st)                               The Devil Dancer   \n",
-       "15            1927/28 (1st)                                The Magic Flame   \n",
-       "16            1927/28 (1st)                                 Sadie Thompson   \n",
-       "17   1928/29 (2nd) [note 1]                                            NaN   \n",
-       "..                      ...                                            ...   \n",
-       "782             2022 (95th)                 All Quiet on the Western Front   \n",
-       "783             2022 (95th)  Bardo, False Chronicle of a Handful of Truths   \n",
-       "784             2022 (95th)                                          Elvis   \n",
-       "785             2022 (95th)                                Empire of Light   \n",
-       "786             2022 (95th)                                            Tár   \n",
+       "          Year                                           Film  \\\n",
+       "13  1927-01-01                  Sunrise: A Song of Two Humans   \n",
+       "14  1927-01-01                               The Devil Dancer   \n",
+       "15  1927-01-01                                The Magic Flame   \n",
+       "16  1927-01-01                                 Sadie Thompson   \n",
+       "18  1928-01-01                White Shadows in the South Seas   \n",
+       "..         ...                                            ...   \n",
+       "782 2022-01-01                 All Quiet on the Western Front   \n",
+       "783 2022-01-01  Bardo, False Chronicle of a Handful of Truths   \n",
+       "784 2022-01-01                                          Elvis   \n",
+       "785 2022-01-01                                Empire of Light   \n",
+       "786 2022-01-01                                            Tár   \n",
        "\n",
        "                       Nominees  \n",
        "13   Charles Rosher Karl Struss  \n",
        "14                George Barnes  \n",
        "15                George Barnes  \n",
        "16                George Barnes  \n",
-       "17                          NaN  \n",
+       "18               Clyde De Vinna  \n",
        "..                          ...  \n",
        "782                James Friend  \n",
        "783              Darius Khondji  \n",
@@ -281,10 +281,10 @@
        "785               Roger Deakins  \n",
        "786         Florian Hoffmeister  \n",
        "\n",
-       "[774 rows x 3 columns]"
+       "[681 rows x 3 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -298,13 +298,24 @@
     "ac_bc_cl = ac_bc.drop(['Category', 'Name', 'Superlative', 'Notes', 'Awards', 'Nominations', 'Recipient'], axis=1)\n",
     "\n",
     "ac_bc_cl = ac_bc_cl.iloc[13:, :]\n",
-    "ac_bc_cl = ac_bc_cl.dropna(how='all')\n",
-    "ac_bc_cl"
+    "\n",
+    "\n",
+    "#suppression lignes avec seulement année \n",
+    "\n",
+    "ac_bc_cl['Year'] = ac_bc_cl['Year'].astype(str)\n",
+    "\n",
+    "#conversion en type date de la colonne 'Year' \n",
+    "ac_bc_cl['Year'] = ac_bc_cl['Year'].str.extract('(\\d{4})', expand=False)\n",
+    "ac_bc_cl['Year'] = pd.to_datetime(ac_bc_cl['Year'], format='%Y', errors='coerce')\n",
+    "ac_bc_cl = ac_bc_cl.dropna(subset=['Film', 'Nominees'], how='all')\n",
+    "\n",
+    "ac_bc_cl\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 23,
    "id": "bcf48d70-8682-400b-98ce-617f59f9c2a5",
    "metadata": {},
    "outputs": [
@@ -330,38 +341,38 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>Year</th>\n",
-       "      <th>Director(s)</th>\n",
+       "      <th>Director</th>\n",
        "      <th>Film</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>1927/28 (1st)</td>\n",
+       "      <td>1927-01-01</td>\n",
        "      <td>Frank Borzage (Dramatic Picture)</td>\n",
        "      <td>7th Heaven</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>1927/28 (1st)</td>\n",
+       "      <td>1927-01-01</td>\n",
        "      <td>Herbert Brenon (Dramatic Picture)</td>\n",
        "      <td>Sorrell and Son</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>1927/28 (1st)</td>\n",
+       "      <td>1927-01-01</td>\n",
        "      <td>King Vidor (Dramatic Picture)</td>\n",
        "      <td>The Crowd</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>1927/28 (1st)</td>\n",
+       "      <td>1927-01-01</td>\n",
        "      <td>Lewis Milestone (Comedy Picture)</td>\n",
        "      <td>Two Arabian Knights</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
-       "      <td>1927/28 (1st)</td>\n",
+       "      <td>1927-01-01</td>\n",
        "      <td>Ted Wilde (Comedy Picture)</td>\n",
        "      <td>Speedy</td>\n",
        "    </tr>\n",
@@ -372,80 +383,87 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
+       "      <th>468</th>\n",
+       "      <td>2022-01-01</td>\n",
+       "      <td>Daniel Kwan and Daniel Scheinert</td>\n",
+       "      <td>Everything Everywhere All at Once</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
        "      <th>469</th>\n",
-       "      <td>2022 (95th)</td>\n",
+       "      <td>2022-01-01</td>\n",
        "      <td>Todd Field</td>\n",
        "      <td>Tár</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>470</th>\n",
-       "      <td>2022 (95th)</td>\n",
+       "      <td>2022-01-01</td>\n",
        "      <td>Martin McDonagh</td>\n",
        "      <td>The Banshees of Inisherin</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>471</th>\n",
-       "      <td>2022 (95th)</td>\n",
+       "      <td>2022-01-01</td>\n",
        "      <td>Ruben Östlund</td>\n",
        "      <td>Triangle of Sadness</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>472</th>\n",
-       "      <td>2022 (95th)</td>\n",
+       "      <td>2022-01-01</td>\n",
        "      <td>Steven Spielberg</td>\n",
        "      <td>The Fabelmans</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>473</th>\n",
-       "      <td>2022 (95th)</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>473 rows × 3 columns</p>\n",
+       "<p>472 rows × 3 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "              Year                        Director(s)  \\\n",
-       "1    1927/28 (1st)   Frank Borzage (Dramatic Picture)   \n",
-       "2    1927/28 (1st)  Herbert Brenon (Dramatic Picture)   \n",
-       "3    1927/28 (1st)      King Vidor (Dramatic Picture)   \n",
-       "4    1927/28 (1st)   Lewis Milestone (Comedy Picture)   \n",
-       "5    1927/28 (1st)         Ted Wilde (Comedy Picture)   \n",
-       "..             ...                                ...   \n",
-       "469    2022 (95th)                         Todd Field   \n",
-       "470    2022 (95th)                    Martin McDonagh   \n",
-       "471    2022 (95th)                      Ruben Östlund   \n",
-       "472    2022 (95th)                   Steven Spielberg   \n",
-       "473    2022 (95th)                                NaN   \n",
+       "          Year                           Director  \\\n",
+       "1   1927-01-01   Frank Borzage (Dramatic Picture)   \n",
+       "2   1927-01-01  Herbert Brenon (Dramatic Picture)   \n",
+       "3   1927-01-01      King Vidor (Dramatic Picture)   \n",
+       "4   1927-01-01   Lewis Milestone (Comedy Picture)   \n",
+       "5   1927-01-01         Ted Wilde (Comedy Picture)   \n",
+       "..         ...                                ...   \n",
+       "468 2022-01-01   Daniel Kwan and Daniel Scheinert   \n",
+       "469 2022-01-01                         Todd Field   \n",
+       "470 2022-01-01                    Martin McDonagh   \n",
+       "471 2022-01-01                      Ruben Östlund   \n",
+       "472 2022-01-01                   Steven Spielberg   \n",
        "\n",
-       "                          Film  \n",
-       "1                   7th Heaven  \n",
-       "2              Sorrell and Son  \n",
-       "3                    The Crowd  \n",
-       "4          Two Arabian Knights  \n",
-       "5                       Speedy  \n",
-       "..                         ...  \n",
-       "469                        Tár  \n",
-       "470  The Banshees of Inisherin  \n",
-       "471        Triangle of Sadness  \n",
-       "472              The Fabelmans  \n",
-       "473                        NaN  \n",
+       "                                  Film  \n",
+       "1                           7th Heaven  \n",
+       "2                      Sorrell and Son  \n",
+       "3                            The Crowd  \n",
+       "4                  Two Arabian Knights  \n",
+       "5                               Speedy  \n",
+       "..                                 ...  \n",
+       "468  Everything Everywhere All at Once  \n",
+       "469                                Tár  \n",
+       "470          The Banshees of Inisherin  \n",
+       "471                Triangle of Sadness  \n",
+       "472                      The Fabelmans  \n",
        "\n",
-       "[473 rows x 3 columns]"
+       "[472 rows x 3 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "ac_bd_cl = ac_bd.drop (['0', 'Ref.', 'Wins', 'Director', 'Nominations', 'Record', 'Age' ], axis=1)\n",
-    "ac_bd_cl = ac_bd_cl.dropna(how='all')\n",
     "ac_bd_cl = ac_bd_cl.iloc[:473, :]\n",
-    "ac_bd_cl\n"
+    "\n",
+    "ac_bd_cl['Year'] = ac_bd_cl['Year'].astype(str)\n",
+    "ac_bd_cl['Year'] = ac_bd_cl['Year'].str.extract('(\\d{4})', expand=False)\n",
+    "ac_bd_cl['Year'] = pd.to_datetime(ac_bd_cl['Year'], format='%Y', errors='coerce')\n",
+    "ac_bd_cl.rename(columns={'Director(s)': 'Director'}, inplace=True)\n",
+    "ac_bd_cl = ac_bd_cl.dropna(subset=['Director', 'Film'], how='all')\n",
+    "\n",
+    "ac_bd_cl\n",
+    "\n"
    ]
   },
   {
