nettoyage ac_bf en cours

--- a/cleaning_data/cleaning_awards.ipynb
+++ b/cleaning_data/cleaning_awards.ipynb
@@ -2,12 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 37,
    "id": "51544ce2-25d7-49f5-a38b-cb224ca714da",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "import re"
    ]
   },
   {
@@ -468,11 +469,277 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "id": "be6fe544-6e3f-4ef1-adf0-7d42b58c63af",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "DataFrame after processing:\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Year of Film Release</th>\n",
+       "      <th>Film</th>\n",
+       "      <th>Film Studio</th>\n",
+       "      <th>Film Studio/Producer(s)</th>\n",
+       "      <th>Producer(s)</th>\n",
+       "      <th>Production Company</th>\n",
+       "      <th>Nominations</th>\n",
+       "      <th>Wins</th>\n",
+       "      <th>StudioName</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1927/28 (1st)</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1927/28 (1st)</td>\n",
+       "      <td>Wings</td>\n",
+       "      <td>Famous Players–Lasky</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Lucien Hubbard, Jesse L. Lasky, B.P. Schulberg...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1927/28 (1st)</td>\n",
+       "      <td>7th Heaven</td>\n",
+       "      <td>Fox</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>William Fox, producer</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1927/28 (1st)</td>\n",
+       "      <td>The Racket</td>\n",
+       "      <td>The Caddo Company</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Howard Hughes, producer</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1928/29 (2nd) [a]</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>714</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Pixar Animation Studios</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>715</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Hollywood Pictures</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>716</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>The Caddo Company</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>717</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Walter Wanger (production company)</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>718</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Mercury</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>719 rows × 9 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    Year of Film Release        Film           Film Studio  \\\n",
+       "0          1927/28 (1st)         NaN                   NaN   \n",
+       "1          1927/28 (1st)       Wings  Famous Players–Lasky   \n",
+       "2          1927/28 (1st)  7th Heaven                   Fox   \n",
+       "3          1927/28 (1st)  The Racket     The Caddo Company   \n",
+       "4      1928/29 (2nd) [a]         NaN                   NaN   \n",
+       "..                   ...         ...                   ...   \n",
+       "714                  NaN         NaN                   NaN   \n",
+       "715                  NaN         NaN                   NaN   \n",
+       "716                  NaN         NaN                   NaN   \n",
+       "717                  NaN         NaN                   NaN   \n",
+       "718                  NaN         NaN                   NaN   \n",
+       "\n",
+       "    Film Studio/Producer(s)  \\\n",
+       "0                       NaN   \n",
+       "1                       NaN   \n",
+       "2                       NaN   \n",
+       "3                       NaN   \n",
+       "4                       NaN   \n",
+       "..                      ...   \n",
+       "714                     NaN   \n",
+       "715                     NaN   \n",
+       "716                     NaN   \n",
+       "717                     NaN   \n",
+       "718                     NaN   \n",
+       "\n",
+       "                                           Producer(s)  \\\n",
+       "0                                                  NaN   \n",
+       "1    Lucien Hubbard, Jesse L. Lasky, B.P. Schulberg...   \n",
+       "2                                William Fox, producer   \n",
+       "3                              Howard Hughes, producer   \n",
+       "4                                                  NaN   \n",
+       "..                                                 ...   \n",
+       "714                                                NaN   \n",
+       "715                                                NaN   \n",
+       "716                                                NaN   \n",
+       "717                                                NaN   \n",
+       "718                                                NaN   \n",
+       "\n",
+       "                     Production Company  Nominations  Wins StudioName  \n",
+       "0                                   NaN          NaN   NaN        NaN  \n",
+       "1                                   NaN          NaN   NaN        NaN  \n",
+       "2                                   NaN          NaN   NaN        NaN  \n",
+       "3                                   NaN          NaN   NaN        NaN  \n",
+       "4                                   NaN          NaN   NaN        NaN  \n",
+       "..                                  ...          ...   ...        ...  \n",
+       "714             Pixar Animation Studios          2.0   0.0        NaN  \n",
+       "715                  Hollywood Pictures          2.0   0.0        NaN  \n",
+       "716                   The Caddo Company          2.0   0.0        NaN  \n",
+       "717  Walter Wanger (production company)          2.0   0.0        NaN  \n",
+       "718                             Mercury          2.0   0.0        NaN  \n",
+       "\n",
+       "[719 rows x 9 columns]"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ac_bf_cl=ac_bf\n",
+    "\n",
+    "def extract_studio_producer(entry):\n",
+    "    if pd.notna(entry):\n",
+    "        match = re.match(r'(.+?)\\s*\\((.+)\\)', str(entry))\n",
+    "        if match:\n",
+    "            return match.group(1).strip(), match.group(2).strip()\n",
+    "        else:\n",
+    "            return entry.strip(), None\n",
+    "    else:\n",
+    "        return entry, None\n",
+    "        \n",
+    "# Apply the function to the 'Film Studio' column\n",
+    "ac_bf_cl[['Studio', 'Producer']] = ac_bf_cl['Film Studio'].apply(extract_studio_producer).apply(pd.Series)\n",
+    "\n",
+    "ac_bf_cl['Film Studio'] = ac_bf_cl['Studio']\n",
+    "\n",
+    "# Fill missing 'Producer(s)' values using 'Producer' only when 'Producer(s)' is NaN\n",
+    "mask = ac_bf_cl['Producer(s)'].isna()\n",
+    "ac_bf_cl.loc[mask, 'Producer(s)'] = ac_bf_cl['Producer']\n",
+    "\n",
+    "# Drop the intermediate 'Studio' and 'Producer' columns\n",
+    "ac_bf_cl = ac_bf_cl.drop(columns=['Studio', 'Producer'])\n",
+    "# Display the DataFrame after processing\n",
+    "print(\"\\nDataFrame after processing:\")\n",
+    "ac_bf_cl"
+   ]
   },
   {
    "cell_type": "code",
